fixed yamm menu spacing

--- a/app/modules/main/assets/sass/_header.scss
+++ b/app/modules/main/assets/sass/_header.scss
@@ -337,11 +337,12 @@ header:not(.demo) {
     cursor: default;
   }
   .menu-items {
-    li {
+    > div {
       font-family: $font-family-sans-serif;
       font-size: 12px;
       color: $text-color;
       padding-left: 10px;
+      margin-bottom: 20px;
       &:hover {
         background-color: $pb-bg3;
         color: $pb-gray-700;
@@ -353,7 +354,6 @@ header:not(.demo) {
         color: inherit;
         display: block;
         width: 100%;
-        padding: 0 5px 25px 0;
         line-height: 1.4;
         &:hover {
           text-decoration: none;
